# dyna-automator

./: LICENSE  README.md  cli.py  core.py  project.toml  pyproject.toml  requirements.txt
dyna-automator/: cli.py  core.py
dyna_automator/: __init__.py  browser_manager.py  element_handler.py
dyna_automator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dyna_automator/cli/: commands.py  main.py  shell.py
dyna_automator/scripting/: runner.py
scripts/: get_monalisa.py
tests/: test_cli.py
